--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Home</title>
   </head>
   <body>
     <div class="container">
       <div class="menu-container"></div>
+      <form>
+        <input
+          class="search"
+          type="search"
+          placeholder="Filter articles by title..."
+        />
+      </form>
       <h1>Articles</h1>
       <div class="article-container">Loading articles...</div>
     </div>
-    <script src="js/index.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
   </body>
 </html>
