created Login page and function

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="menu-container"></div>
-      <form>
+      <form class="search-form">
         <input
           class="search"
           type="search"
