--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           placeholder="Filter articles by title..."
         />
       </form>
-      <h1>Articles</h1>
+      <h1 class="article-heading">Articles</h1>
       <div class="article-container">Loading articles...</div>
     </div>
     <script src="js/script.js" type="module"></script>
