created delete article function

--- a/public/edit.html
+++ b/public/edit.html
@@ -26,8 +26,8 @@
           <input id="author" />
         </div>
         <input id="id" hidden />
-
         <button id="update">Update article</button>
+        <div class="delete-container"></div>
       </form>
     </div>
     <script src="js/edit.js" type="module"></script>
