--- a/public/favourites.html
+++ b/public/favourites.html
@@ -16,7 +16,7 @@
       <div class="menu-container"></div>
       <div class="fav-header">
         <h1>Favourites</h1>
-        <button>Clear all</button>
+        <button class="fav-btn">Clear all</button>
       </div>
       <div class="article-container"></div>
     </div>
